# data-science-template

./: LICENSE  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_creation.py
{{cookiecutter.repo_name}}/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
