[tool.poetry]
name = "datascience_template"
version = "0.1.0"
description = ""
authors = ["Max Rausch-Dupont <maxrd79@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cookiecutter = "^2.1.1"
pytest = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
