[tool.poetry]
name = "{{cookiecutter.repo_name}}"
version = "0.1.0"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author_name}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.open_source_license}}"

[tool.poetry.dependencies]
python = "^3.8"
matplotlib = "^3.6.0"
jupyterlab = "^3.4.7"
notebook = "^6.4.12"
pandas = "^1.5.0"
seaborn = "^0.12.0"
scikit-learn = "^1.1.2"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
nbdime = "^3.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
